# Gear-shift-FuzzyLogic

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: FuzzyHelpers.hpp  FuzzyInputs.hpp  FuzzyRules.hpp  GearShift.hpp
src/: GearShift.cpp  main.cpp
test-visualization/: car_gear_shift_simulation.ipynb
